--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.5.1",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.5.0",
+    "lucide-react": "^0.479.0",
     "primereact": "^10.0.2",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
     "sass": "^1.69.1",
@@ -32,7 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.37",
     "tailwindcss": "^3.4.1",
-    "vite": "^4.4.5"
+    "vite": "^6.2.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
