--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^2.1.0",
+    "antd": "^5.24.5",
     "axios": "^1.5.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.5.0",
